terraform/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: ha
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
      - name: home-assistant
        image: "ghcr.io/home-assistant/home-assistant:2022.12.1"
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: false
            #        envFrom:
            #          - configMapRef:
            #              name: home-assistant-config
        ports:
          - name: http
            containerPort: 8123
            protocol: TCP
        resources: {}
        volumeMounts:
          - name: ha-config-root
            mountPath: /config
      restartPolicy: Always
      volumes:
        - name: ha-config-root
          persistentVolumeClaim:
            claimName: home-assistant-config-root
