terraform/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: ha
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: "Cluster"
  selector:
    app: home-assistant
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 8123
      nodePort: 30002
